svn path=/branches/v0.5.3-DeferredLightning/; revision=307

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -500,11 +500,11 @@
 			Name="ZEGraphics"
 			>
 			<File
-				RelativePath=".\ZEBitmap.cpp"
+				RelativePath=".\Source\ZEGraphics\ZEBitmap.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\ZEBitmap.h"
+				RelativePath=".\Source\ZEGraphics\ZEBitmap.h"
 				>
 			</File>
 			<File
