svn path=/branches/v0.5.4-Physics/; revision=325

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -2283,6 +2283,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalMaterial.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalRigidBody.cpp"
 					>
 				</File>
