svn path=/trunk/; revision=352

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -5,7 +5,7 @@ LogFile = error.log
 [ModuleManager]
 GraphicsModule = Direct3D9
 InputModule = DirectInput
-SoundModule = DirectSound
+SoundModule = OpenAL
 NetworkModule = WinNetwork
 PhysicsModule = PhysX
 GameModule = TestGame
