ADD: Runtime Property system added to ZEClass and a new struct has been created as ZERunTimeProperty int ZEProperty.h ADD: Some of the methods are registered to meta system. EX(ZEPlayer, ZELight etc.)
svn path=/branches/v0.5.4-Meta/; revision=367

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1140,6 +1140,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZEGame\ZEDGrid.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEGame\ZEDGrid.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEGame\ZEDrawParameters.cpp"
 				>
 			</File>
