--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1684,11 +1684,35 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZEUI\ZEIUCheckBoxControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEIUCheckBoxControl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEUIButtonControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEUIButtonControl.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEUI\ZEUIControl.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Source\ZEUI\ZEUIControl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEUICursorControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEUICursorControl.h"
 				>
 			</File>
 			<File
@@ -1965,6 +1989,14 @@
 			</File>
 			<File
 				RelativePath=".\Source\ZEDebug\ZEDebugModule.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEDebug\ZEGUIDebugModule.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEDebug\ZEGUIDebugModule.h"
 				>
 			</File>
 			<File
