svn path=/branches/v0.5.3-DeferredLightning/; revision=382

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -848,6 +848,10 @@
 						</FileConfiguration>
 					</File>
 					<File
+						RelativePath=".\RunDir\resources\shaders\Shadow.hlsl"
+						>
+					</File>
+					<File
 						RelativePath=".\RunDir\resources\shaders\SimpleMaterial.hlsl"
 						>
 						<FileConfiguration
