svn path=/branches/v0.5.3-DeferredLightning/; revision=384

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -856,7 +856,7 @@
 						</FileConfiguration>
 					</File>
 					<File
-						RelativePath=".\RunDir\resources\shaders\Shadow.hlsl"
+						RelativePath=".\RunDir\resources\shaders\ShadowMaterial.hlsl"
 						>
 					</File>
 					<File
