svn path=/branches/v0.5.3-DeferredLightning/; revision=387

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -856,6 +856,10 @@
 						</FileConfiguration>
 					</File>
 					<File
+						RelativePath=".\RunDir\resources\shaders\Shadow.hlsl"
+						>
+					</File>
+					<File
 						RelativePath=".\RunDir\resources\shaders\ShadowMaterial.hlsl"
 						>
 					</File>
