svn path=/branches/v0.5.3-TextureCompression/; revision=388

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1737,6 +1737,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZEDS\ZEFileCache.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEDS\ZEFileCache.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEDS\ZENamed.cpp"
 				>
 			</File>
