svn path=/branches/v0.5.4-GUI/; revision=391

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1692,6 +1692,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZEUI\ZEUIBorderedFrameControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEUI\ZEUIBorderedFrameControl.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEUI\ZEUIButtonControl.cpp"
 				>
 			</File>
