svn path=/branches/v0.5.4-Physics/; revision=427

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -2184,6 +2184,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZEPhysics\ZEPhysicalMesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZEPhysics\ZEPhysicalMesh.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZEPhysics\ZEPhysicalObject.cpp"
 				>
 			</File>
@@ -2205,22 +2213,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\ZEPhysics\ZEPhysicalShapes.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\ZEPhysics\ZEPhysicalStaticMesh.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\ZEPhysics\ZEPhysicalStaticMesh.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\ZEPhysics\ZEPhysicalStaticRigidBody.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\ZEPhysics\ZEPhysicalStaticRigidBody.h"
 				>
 			</File>
 			<File
@@ -2291,11 +2283,27 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalCharacterController.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalCharacterController.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalJoint.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalJoint.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalMesh.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalMesh.h"
 					>
 				</File>
 				<File
@@ -2307,19 +2315,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalStaticMesh.cpp"
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalTrigger.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalStaticMesh.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalStaticRigidBody.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalStaticRigidBody.h"
+					RelativePath=".\Source\ZEPhysics\ZEPhysX\ZEPhysXPhysicalTrigger.h"
 					>
 				</File>
 				<File
