--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1885,6 +1885,22 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ZECore\ZECommandManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZECommandManager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZECommandSection.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZECommandSection.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\ZECore\ZEConsole.cpp"
 				>
 			</File>
@@ -1938,6 +1954,22 @@
 			</File>
 			<File
 				RelativePath=".\Source\ZECore\ZEOption.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZEOptionManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZEOptionManager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZEOptionSection.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ZECore\ZEOptionSection.h"
 				>
 			</File>
 			<File
@@ -2407,6 +2439,10 @@
 		</Filter>
 		<File
 			RelativePath=".\Changelog.txt"
+			>
+		</File>
+		<File
+			RelativePath=".\Source\ZEAPI.h"
 			>
 		</File>
 		<File
