--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -35,39 +35,41 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-
-add_source(ZECommand.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZECommand.cpp ZECore_SOURCE_FILES)
 add_source(ZECommand.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECommandManager.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZECommandManager.cpp ZECore_SOURCE_FILES)
 add_source(ZECommandManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECommandSection.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZECommandSection.cpp ZECore_SOURCE_FILES)
 add_source(ZECommandSection.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEConsole.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEConsole.cpp ZECore_SOURCE_FILES)
 add_source(ZEConsole.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEConsoleWindow.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEConsoleWindow.cpp ZECore_SOURCE_FILES)
 add_source(ZEConsoleWindow.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECore.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZECore.cpp ZECore_SOURCE_FILES)
 add_source(ZECore.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEError.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEError.cpp ZECore_SOURCE_FILES)
 add_source(ZEError.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModule.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEModule.cpp ZECore_SOURCE_FILES)
 add_source(ZEModule.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModuleManager.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEModuleManager.cpp ZECore_SOURCE_FILES)
 add_source(ZEModuleManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOption.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEOption.cpp ZECore_SOURCE_FILES)
 add_source(ZEOption.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOptionManager.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEOptionManager.cpp ZECore_SOURCE_FILES)
 add_source(ZEOptionManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOptionSection.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEOptionSection.cpp ZECore_SOURCE_FILES)
 add_source(ZEOptionSection.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResource.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEResource.cpp ZECore_SOURCE_FILES)
 add_source(ZEResource.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResourceFile.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEResourceFile.cpp ZECore_SOURCE_FILES)
 add_source(ZEResourceFile.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResourceManager.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEResourceManager.cpp ZECore_SOURCE_FILES)
 add_source(ZEResourceManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEWindow.cpp ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEWindow.cpp ZECore_SOURCE_FILES)
 add_source(ZEWindow.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEWindowResource.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEWindowResource.h ZECore_SOURCE_FILES)
 
 add_library(ZECore ${ZECore_SOURCE_FILES})
+
+install(TARGETS ZECore COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install(FILES zesdk_INCLUDES COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZECore)
