--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,9 +11,9 @@ PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1024
-ScreenHeight = 768
-Fullscreen = false
+ScreenWidth = 1680
+ScreenHeight = 1050
+Fullscreen = true
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
