svn path=/trunk/; revision=447

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,10 @@ add_subdirectory (Source)
 ## PACKING
 #########################################################################################
 INCLUDE(InstallRequiredSystemLibraries)
-
+SET(CPACK_PACKAGE_NAME "ZinekEngine")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Zinek Engine")
 SET(CPACK_PACKAGE_VENDOR "Zinek Code House and Game Studio")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/Installation/ReadMe.txt")
-SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Installation/License.txt")
 SET(CPACK_PACKAGE_VERSION_MAJOR "0")
 SET(CPACK_PACKAGE_VERSION_MINOR "5")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
@@ -97,5 +96,39 @@ SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.zinekengine.com")
 SET(CPACK_NSIS_CONTACT "contact@zinekengine.com")
 SET(CPACK_NSIS_MODIFY_PATH ON)
 
+SET(CPACK_PACKAGE_INSTALL_DIRECTORY "Zinek Engine 0.5")
+SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "Zinek Engine 0.5.0")
+
+SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Installation/License.txt")
+SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/Installation/Welcome.txt")
+SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/Installation/Description.txt")
+
+SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
+SET(CPACK_GENERATOR "STGZ;TGZ;TZ")
+SET(CPACK_INSTALL_CMAKE_PROJECTS "/home/andy/vtk/CMake-bin;CMake;ALL;/")
+SET(CPACK_NSIS_DISPLAY_NAME "CMake 2.5")
+SET(CPACK_OUTPUT_CONFIG_FILE "/home/andy/vtk/CMake-bin/CPackConfig.cmake")
+SET(CPACK_PACKAGE_DESCRIPTION_FILE "/home/andy/vtk/CMake/Copyright.txt")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CMake is a build tool")
+SET(CPACK_PACKAGE_EXECUTABLES "ccmake;CMake")
+SET(CPACK_PACKAGE_FILE_NAME "cmake-2.5.0-Linux-i686")
+SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake 2.5")
+SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "CMake 2.5.0")
+SET(CPACK_PACKAGE_NAME "CMake")
+SET(CPACK_PACKAGE_VENDOR "Kitware")
+SET(CPACK_PACKAGE_VERSION "2.5.0")
+SET(CPACK_PACKAGE_VERSION_MAJOR "2")
+SET(CPACK_PACKAGE_VERSION_MINOR "5")
+SET(CPACK_PACKAGE_VERSION_PATCH "0")
+SET(CPACK_RESOURCE_FILE_LICENSE "/home/andy/vtk/CMake/Copyright.txt")
+SET(CPACK_RESOURCE_FILE_README "/home/andy/vtk/CMake/Templates/CPack.GenericDescription.txt")
+SET(CPACK_RESOURCE_FILE_WELCOME "/home/andy/vtk/CMake/Templates/CPack.GenericWelcome.txt")
+SET(CPACK_SOURCE_GENERATOR "TGZ;TZ")
+SET(CPACK_SOURCE_OUTPUT_CONFIG_FILE "/home/andy/vtk/CMake-bin/CPackSourceConfig.cmake")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "cmake-2.5.0")
+SET(CPACK_SOURCE_STRIP_FILES "")
+SET(CPACK_STRIP_FILES "bin/ccmake;bin/cmake;bin/cpack;bin/ctest")
+SET(CPACK_SYSTEM_NAME "Linux-i686")
+SET(CPACK_TOPLEVEL_TAG "Linux-i686")
 SET(CPACK_PACKAGE_EXECUTABLES "MyExecutable" "My Executable")
 INCLUDE(CPack)
